force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/et4ae5__DateBounced__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__DateBounced__c</fullName>
    <inlineHelpText>La fecha y la hora en que se realizó la devolución desde la dirección de email de este suscriptor</inlineHelpText>
    <label>Date Bounced</label>
    <type>DateTime</type>
</CustomField>