force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/et4ae5__DateOpened__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__DateOpened__c</fullName>
    <inlineHelpText>La fecha y la hora en que el suscriptor abrió el email</inlineHelpText>
    <label>Date Opened</label>
    <type>DateTime</type>
</CustomField>