force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/et4ae5__HardBounce__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__HardBounce__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>El email enviado a este suscriptor se rechazó debido a anomalías de carácter permanente (esto sucede normalmente cuando se produce un error de tipo &quot;usuario desconocido&quot; o &quot;dominio no encontrado&quot;).</inlineHelpText>
    <label>Hard Bounce</label>
    <type>Checkbox</type>
</CustomField>