force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/et4ae5__NumberOfUniqueClicks__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__NumberOfUniqueClicks__c</fullName>
    <inlineHelpText>Si el valor es 0, el suscriptor individual no hizo clic en los vínculos del mensaje de email. Si el valor es 1, el suscriptor individual hizo clic en los vínculos del mensaje de email.</inlineHelpText>
    <label>Links Clicked</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>