force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/et4ae5__Opened__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indica si el suscriptor abrió o no el email</inlineHelpText>
    <label>Opened</label>
    <type>Checkbox</type>
</CustomField>